--- a/src/content/ideas/2025/gios-retro/index.mdx
+++ b/src/content/ideas/2025/gios-retro/index.mdx
@@ -2,6 +2,7 @@
 title: 'Graduate Introduction to Operating Systems'
 description: 'What I Learned in Graduate Introduction to Operating Systems (GIOS) - A Retrospective'
 date: '2025-06-22'
+updated: '2025-07-09'
 status: 'complete'
 type: 'retro'
 tags: ['GIOS', 'operating-systems', 'c', 'c++', 'multithreading', 'IPC', 'socket-programming', 'distributed-systems']
@@ -492,6 +493,8 @@ The projects were a great way to solidify the concepts learned in the course and
 I'm writing follow-up posts for each project to explore them in more detail. Here is the first one:
 
 - **Project 1:** [Concurrent File Server](/ideas/2025/gios-pr1/)
+- (project 2 was omitted in my iteration of the course)
+- **Project 3:** [Cache & Proxy Servers with Shared Memory IPC](/ideas/2025/gios-pr3/)
 
 I'll update this list as I write about the other projects.
 
