--- a/src/content/ideas/2025/gios-pr1/index.mdx
+++ b/src/content/ideas/2025/gios-pr1/index.mdx
@@ -1,7 +1,8 @@
 ---
-title: 'Concurrent File Server'
-description: 'Building a Scalable Multithreaded File Server in C: Lessons from a Graduate OS Course'
+title: 'Building a Scalable Multithreaded File Server in C'
+description: 'A project that explores multithreading, sockets, and the basics of operating systems'
 date: '2025-06-23'
+updated: '2025-07-09'
 status: 'complete'
 type: 'project'
 tags: ['GIOS', 'operating-systems', 'c', 'multithreading', 'socket-programming']
