Update images in draft ML posts

--- a/src/content/draft/ml-a1/index.mdx
+++ b/src/content/draft/ml-a1/index.mdx
@@ -1,17 +1,17 @@
 ---
 title: 'Supervised Learning on Diverse Datasets'
 description: 'A comparative analysis of supervised learning algorithms on diverse datasets'
-date: '2025-01-28'
+date: '2025-08-01'
 status: 'in-progress'
 type: 'project'
-tags: ['machine-learning', 'python']
+tags: ['machine-learning', 'python', 'supervised-learning']
 category: ['projects']
 draft: false
 audience: 'All'
 media_subpath: "/ideas/ml-a1/"
 image:
-  path: "./Moebius09.jpg"
-  alt: 'Moebius 09 by Jean Giraud'
+  path: "./signac-saint-tropez-sl.jpg"
+  alt: 'The Port of Saint-Tropez by Paul Signac'
 ---
 
 ## Introduction
