--- a/src/content/draft/ml-a2/index.mdx
+++ b/src/content/draft/ml-a2/index.mdx
@@ -1,17 +1,17 @@
 ---
 title: 'Random Optimization on Discrete and Continuous Problems'
 description: 'A comparative analysis of random optimization performance on discrete and continuous problems'
-date: '2025-01-28'
+date: '2025-08-02'
 status: 'in-progress'
 type: 'project'
-tags: ['machine-learning', 'python']
+tags: ['machine-learning', 'python', 'optimization']
 category: ['projects']
 draft: false
 audience: 'All'
 media_subpath: "/ideas/ml-a2/"
 image:
-  path: "./moebius-aka-jean-giraud-41-of-41.jpg"
-  alt: 'Moebius aka Jean Giraud 41 of 41'
+  path: "./signac-saint-tropez-optim.jpg"
+  alt: 'The Port of Saint-Tropez by Paul Signac'
 ---
 
 ## Introduction
