--- a/src/content/draft/ml-a4/index.mdx
+++ b/src/content/draft/ml-a4/index.mdx
@@ -1,17 +1,17 @@
 ---
 title: 'Reinforcement Learning on a Discrete & Continuous Environments'
 description: 'Comparison of reinforcement learning algorithms in discrete and continuous environments'
-date: '2025-01-28'
+date: '2025-08-04'
 status: 'in-progress'
 type: 'project'
-tags: ['machine-learning', 'python']
+tags: ['machine-learning', 'python', 'reinforcement-learning']
 category: ['projects']
 draft: false
 audience: 'All'
 media_subpath: "/ideas/ml-a4/"
 image:
-  path: "./Moebius02.webp"
-  alt: 'Moebius 02 by Jean Giraud'
+  path: "./signac-saint-tropez-rl.jpg"
+  alt: 'The Port of Saint-Tropez by Paul Signac'
 ---
 
 ## Introduction
