--- a/src/content/draft/ml-a3/index.mdx
+++ b/src/content/draft/ml-a3/index.mdx
@@ -1,17 +1,17 @@
 ---
 title: 'Unsupervised Learning Techniques'
 description: 'Exploration of unsupervised learning techniques'
-date: '2025-01-28'
+date: '2025-08-03'
 status: 'in-progress'
 type: 'project'
-tags: ['machine-learning', 'python']
+tags: ['machine-learning', 'python', 'unsupervised-learning']
 category: ['projects']
 draft: false
 audience: 'All'
 media_subpath: "/ideas/ml-a3/"
 image:
-  path: "./moebius-aka-jean-giraud-39-of-41.jpg"
-  alt: 'Moebius aka Jean Giraud 39 of 41'
+  path: "./signac-saint-tropez-ul.jpg"
+  alt: 'The Port of Saint-Tropez by Paul Signac'
 ---
 
 ## Introduction
